Libs updated; compiler-level increased from 8 to 9